--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,43 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer components{
+.sidebar-icon{
+@apply relative flex items-center justify-center
+h-12 w-12 mt-2 mb-2 mx-auto shadow-lg
+bg-blue-800 text-gray-50
+hover:bg-yellow-500 hover:text-gray-900
+hover:rounded-2xl rounded-full
+transition-all duration-200 ease-linear;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.sidebar-tooltip{
+@apply absolute w-auto p-2 m-2 min-w-max left-14
+rounded-md shadow-md text-xs font-bold
+text-white bg-gray-900
+transition-all duration-200 scale-0 origin-left
+}
+
+.bara{
+    @apply px-4 bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500  hover:rounded-xl font-extralight hover:bg-gradient-to-r hover:from-pink-500 hover:via-purple-500 hover:to-indigo-500 hover:font-semibold hover:ring-2 hover:ring-purple-800
+    text-center transition-all duration-200 ease-in 
+    }
+
+.button1{
+    @apply p-2 bg-green-200 text-black hover:bg-green-500 hover:text-xl hover:text-white hover:p-1
+    transition-all duration-200 ease-in-out
+}
+
+
+.button2{
+    @apply p-2 bg-green-200 text-black hover:bg-green-500 hover:text-xl hover:text-white hover:p-1
+    transition-all duration-200 ease-linear
+}
+
+.button3{
+    @apply p-2  rounded-md bg-green-200 text-black hover:bg-green-500 hover:text-xl hover:text-white hover:ring-2 
+    transition-all duration-200 ease-in
+}
+
 }
